--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -11,6 +11,7 @@
 	unstage = reset HEAD
 	me = log --author="mark" --after=yesterday --no-merges --format=%s --reverse
 	cleanup = "!git branch --merged | grep  -v '\\*\\|master\\|develop' | xargs -n 1 git branch -d"
+	track = "!git branch --set-upstream-to=origin/$(git symbolic-ref --short HEAD)"
 [push]
 	default = current
 [core]
