Better scrollback bindings

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -23,7 +23,9 @@ set-option -g history-limit 10000
 # This needs iTerm2 configured to send:
 #   \e[5;2~ for Shift-Pgup and
 #   \e[6;2~ for Shift-PgDn
-bind-key -n S-PageUp if-shell -Ft= "#{pane_in_mode}" \
-    "send-keys -X page-up" "copy-mode -eu"
-bind-key -n S-PageDown if-shell -Ft= "#{pane_in_mode}" \
-    "send-keys -X page-down"
+bind-key -T copy-mode-vi S-PageUp send-keys -X page-up
+bind-key -T copy-mode-vi S-PageDown send-keys -X page-down
+bind-key -T copy-mode S-PageUp send-keys -X page-up
+bind-key -T copy-mode S-PageDown send-keys -X page-down
+bind-key -n S-PageUp copy-mode -eu
+bind-key -n S-PageDown display-message "At bottom"
