--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,6 +19,9 @@ set-option -g base-index 1
 # Big scrollback
 set-option -g history-limit 10000
 
+# Explicitly set copy mode
+set-window-option -g mode-keys vi
+
 # Scrollback using Shift-PgUp and Shift-PgDn
 # This needs iTerm2 configured to send:
 #   \e[5;2~ for Shift-Pgup and
