Move reset file into a .tmux directory

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,5 @@
 # Reset all settings
-source ~/.tmux.reset.conf
+source ~/.tmux/tmux.reset.conf
 
 # Reload with Prefix + r
 bind r source-file ~/.tmux.conf \; display "Config reloaded"
