--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -32,3 +32,7 @@ bind-key -T copy-mode S-PageUp send-keys -X page-up
 bind-key -T copy-mode S-PageDown send-keys -X page-down
 bind-key -n S-PageUp copy-mode -eu
 bind-key -n S-PageDown display-message "At bottom"
+
+# Better window split keys
+bind-key | split-window -h
+bind-key - split-window
