Add mux scripts, and update config.
Config update prompts for window name when making a new window

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -36,3 +36,6 @@ bind-key -n S-PageDown display-message "At bottom"
 # Better window split keys
 bind-key | split-window -h
 bind-key - split-window
+
+# Prompt for the name of a new window
+bind-key c command-prompt -p "Window name:" "new-window -n '%%'"
