--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -33,6 +33,12 @@ bind-key -T copy-mode S-PageDown send-keys -X page-down
 bind-key -n S-PageUp copy-mode -eu
 bind-key -n S-PageDown display-message "At bottom"
 
+# Make mouse wheel scrollback work more like iterm default (1 line at a time)
+bind -T copy-mode WheelUpPane      select-pane \; send-keys -X -N 1 scroll-up
+bind -T copy-mode WheelDownPane    select-pane \; send-keys -X -N 1 scroll-down
+bind -T copy-mode-vi WheelUpPane   select-pane \; send-keys -X -N 1 scroll-up
+bind -T copy-mode-vi WheelDownPane select-pane \; send-keys -X -N 1 scroll-down
+
 # Better window split keys
 bind-key | split-window -h
 bind-key - split-window
