Allow double/triple click to select word/line

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -39,6 +39,10 @@ bind -T copy-mode WheelDownPane    select-pane \; send-keys -X -N 1 scroll-down
 bind -T copy-mode-vi WheelUpPane   select-pane \; send-keys -X -N 1 scroll-up
 bind -T copy-mode-vi WheelDownPane select-pane \; send-keys -X -N 1 scroll-down
 
+# Some more things to make mouse copy mode easier
+bind-key DoubleClick1Pane  select-pane \; copy-mode \; send-keys -X select-word
+bind-key TripleClick1Pane  select-pane \; copy-mode \; send-keys -X select-line
+
 # Better window split keys
 bind-key | split-window -h
 bind-key - split-window
