Shortcuts for loading profiles

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -49,3 +49,7 @@ bind-key - split-window
 
 # Prompt for the name of a new window
 bind-key c command-prompt -p "Window name:" "new-window -n '%%'"
+
+# Load profiles
+bind-key l command-prompt -p "Load profile:" "source-file ~/.tmux/scripts/%%"
+bind-key t source-file ~/.tmux/scripts/4up
