Add tpm, theme and sensible plugins
The themes need work, so I probably won't keep them.

tmux-sensible has a few nice defaults, some of which I was able to
remove from my config file (e.g. history size). I did keep my reload
alias (but changed it to uppercase R) because I like the reloaded
message.

I also added C-d as a binding for quick detaching (similar to the C-p
and C-n bindings in tmux-sensible).

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,8 +1,8 @@
 # Reset all settings
 source ~/.tmux/tmux.reset.conf
 
-# Reload with Prefix + r
-bind r source-file ~/.tmux.conf \; display "Config reloaded"
+# Reload with Prefix + R
+bind R source-file ~/.tmux.conf \; display "Config reloaded"
 
 # C-a is better than C-b
 set-option -g prefix C-a
@@ -15,9 +15,6 @@ set-option -g set-titles on
 
 # Make the first window index 1 (because 1 is on the left on the keyboard)
 set-option -g base-index 1
-
-# Big scrollback
-set-option -g history-limit 10000
 
 # Explicitly set copy mode
 set-window-option -g mode-keys vi
@@ -53,3 +50,25 @@ bind-key c command-prompt -p "Window name:" "new-window -n '%%'"
 # Load profiles
 bind-key l command-prompt -p "Load profile:" "source-file ~/.tmux/scripts/%%"
 bind-key t source-file ~/.tmux/scripts/4up
+
+# Detatch should accept C-d
+bind-key C-d detach-client
+
+# Theme
+set -g @themepack 'powerline/double/cyan'
+
+# Plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'jimeh/tmux-themepack'
+
+# Set path for run-shell commands (needed for tpm and homebrew installed tmux)
+set-environment -g PATH "/usr/local/bin:/bin:/usr/bin"
+
+# Auto-install TPM
+if "test ! -d ~/.tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && \
+   ~/.tmux/plugins/tpm/bin/install_plugins'"
+
+# Run tpm
+run -b '~/.tmux/plugins/tpm/tpm'
