Remove gitemail alias in favor of conditional includes

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -20,3 +20,5 @@
 [diff "gpg"]
 	binary = true
 	textconv = gpg2 -d --quiet --yes --compress-algo=none --batch --use-agent
+[includeIf "gitdir:~/git/work/"]
+	path = .gitconfig_work
