Tmux config updates

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,6 +19,11 @@ set-option -g base-index 1
 # Explicitly set copy mode
 set-window-option -g mode-keys vi
 
+# Better copy-mode-vi keybindings
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection
+bind-key -T copy-mode-vi Escape send-keys -X cancel
+
 # Scrollback using Shift-PgUp and Shift-PgDn
 # This needs iTerm2 configured to send:
 #   \e[5;2~ for Shift-Pgup and
@@ -54,13 +59,17 @@ bind-key t source-file ~/.tmux/scripts/4up
 # Detatch should accept C-d
 bind-key C-d detach-client
 
+# Change window order
+bind-key < swap-window -t -1
+bind-key > swap-window -t +1
+
 # Theme
-set -g @themepack 'powerline/double/cyan'
+source ~/.tmux/custom.tmuxtheme
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'jimeh/tmux-themepack'
+set -g @plugin 'tmux-plugins/tmux-copycat'
 
 # Set path for run-shell commands (needed for tpm and homebrew installed tmux)
 set-environment -g PATH "/usr/local/bin:/bin:/usr/bin"
