Update tmux config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -16,6 +16,9 @@ set-option -g set-titles on
 # Make the first window index 1 (because 1 is on the left on the keyboard)
 set-option -g base-index 1
 
+# Make the escape key in vim more responsive
+set-option -sg escape-time 0
+
 # Explicitly set copy mode
 set-window-option -g mode-keys vi
 
