Multiple ssh keys

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -12,3 +12,13 @@ AddKeysToAgent yes
 
 # Include additional private config, if it's present
 Include config-private
+
+# Use specific SSH keys
+Host github.com
+    IdentitiesOnly yes
+    IdentityFile ~/.ssh/id_rsa_github
+
+Host *.local
+    IdentitiesOnly yes
+    IdentityFile ~/.ssh/id_rsa_personal
+    User mark
