Correct key filename, new git host

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -14,11 +14,11 @@ AddKeysToAgent yes
 Include config-private
 
 # Use specific SSH keys
-Host github.com
+Host github.com, git.int.hex0.com
     IdentitiesOnly yes
-    IdentityFile ~/.ssh/id_rsa_github
+    IdentityFile ~/.ssh/id_ed25519_github
 
 Host *.local
     IdentitiesOnly yes
-    IdentityFile ~/.ssh/id_rsa_personal
+    IdentityFile ~/.ssh/id_ed25519_personal
     User mark
