Use ssh for all github URLs

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -26,3 +26,5 @@
 	template = /Users/mark.harrison/.gitmessage
 [diff]
 	wsErrorHighlight = all
+[url "git@github.com:"]
+	insteadOf = https://github.com/
