Force 256 color terminal

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -66,6 +66,9 @@ bind-key C-d detach-client
 bind-key < swap-window -t -1
 bind-key > swap-window -t +1
 
+# Force 256 color terminal
+set -g default-terminal screen-256color
+
 # Theme
 source ~/.tmux/custom.tmuxtheme
 
