Use controlmaster auto

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -22,3 +22,9 @@ Host *.local
     IdentitiesOnly yes
     IdentityFile ~/.ssh/id_ed25519_personal
     User mark
+
+# Persistent connections
+Host *
+    ControlMaster auto
+    ControlPath ~/.ssh/cm_socket/%r_%h_%p
+    ControlPersist 10m
