Fix ssh controlmaster path to never be too long

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -26,5 +26,5 @@ Host *.local
 # Persistent connections
 Host *
     ControlMaster auto
-    ControlPath ~/.ssh/cm_socket/%r_%h_%p
+    ControlPath ~/.ssh/cm_socket/%C
     ControlPersist 10m
