Add work ssh config, and multiple hosts are separated by whitespace not a comma

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -13,8 +13,13 @@ AddKeysToAgent yes
 # Include additional private config, if it's present
 Include config-private
 
-# Use specific SSH keys
-Host github.com, git.int.hex0.com
+# Use specific SSH keys/users
+Host 10.* *-bastion
+    IdentitiesOnly yes
+    IdentityFile ~/.ssh/id_rsa_valimail
+    User mark.harrison
+
+Host github.com git.int.hex0.com
     IdentitiesOnly yes
     IdentityFile ~/.ssh/id_ed25519_github
 
