--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -12,6 +12,9 @@
 	cleanup = "!git branch --merged | grep  -v '\\*\\|master\\|develop' | xargs -n 1 git branch -d"
 	track = "!git branch --set-upstream-to=origin/$(git symbolic-ref --short HEAD)"
 	up = pull --rebase --autostash
+	# From https://github.com/not-an-aardvark/git-delete-squashed
+	delete-squashed = "!git checkout -q master && git for-each-ref refs/heads/ '--format=%(refname:short)' | while read branch; do mergeBase=$(git merge-base master $branch) && [[ $(git cherry master $(git commit-tree $(git rev-parse $branch\\^{tree}) -p $mergeBase -m _)) == '-'* ]] && git branch -D $branch; done"
+
 [push]
 	default = current
 [core]
