Add additional ssh config file

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -12,6 +12,8 @@ AddKeysToAgent yes
 
 # Include additional private config, if it's present
 Include config-private
+# Include work config, if present
+Include config_valimail
 
 # Use specific SSH keys/users
 Host 10.* *-bastion
