Truecolor terminal support for tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -68,6 +68,9 @@ bind-key > swap-window -t +1
 
 # Force 256 color terminal
 set -g default-terminal screen-256color
+# Force true color support inside tmux
+# Note: xterm-256color is the TERM environment variable for outside of tmux
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 # Theme
 source ~/.tmux/custom.tmuxtheme
