Make ssh config compatible with non-mac

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -6,6 +6,8 @@ GSSAPIAuthentication no
 # This should prevent disconnections in most cases
 ServerAliveInterval 60
 
+# Use the Macos keychain if we're on a mac
+IgnoreUnknown UseKeychain
 UseKeychain yes
 
 AddKeysToAgent yes
