--- a/linux/.config/conky/conky.conf
+++ b/linux/.config/conky/conky.conf
@@ -1,31 +1,24 @@
--- Conky, a system monitor https://github.com/brndnmtthws/conky
---
--- This configuration file is Lua code. You can write code in here, and it will
--- execute when Conky loads. You can use it to generate your own advanced
--- configurations.
---
--- Try this (remove the `--`):
---
---   print("Loading Conky config")
---
--- For more on Lua, see:
--- https://www.lua.org/pil/contents.html
-
+-- vim: ft=lua
 conky.config = {
     alignment = 'top_right',
     background = true,
-    border_width = 1,
+    border_width = 10,
     cpu_avg_samples = 2,
+    -- Colors
     default_color = 'white',
     default_outline_color = 'white',
     default_shade_color = 'white',
+    color1 = 'grey',
     double_buffer = true,
     draw_borders = false,
     draw_graph_borders = true,
     draw_outline = false,
     draw_shades = false,
     extra_newline = false,
-    font = 'DejaVu Sans Mono:size=12',
+    -- Fonts
+    font = 'Noto Sans:size=12',
+    font1 = 'Noto Sans:bold', -- Headings
+    font2 = 'DejaVu Sans Mono:size=12', -- Fixed width
     gap_x = 0,
     gap_y = 0,
     minimum_height = 5,
@@ -39,7 +32,8 @@ conky.config = {
     own_window = true,
     own_window_argb_visual = true,
     own_window_argb_value = 128,
-    own_window_type = 'dock',
+    own_window_type = 'normal',
+    own_window_hints = 'undecorated,below,sticky,skip_taskbar,skip_pager',
     show_graph_range = false,
     show_graph_scale = false,
     stippled_borders = 0,
@@ -50,38 +44,35 @@ conky.config = {
 }
 
 conky.text = [[
-${color grey}Info:$color $nodename $kernel
-$hr
-${color grey}Uptime:$color $uptime
-${color grey}CPU Frequency:$color ${freq}MHz
-${color grey}RAM Usage:$color $mem/$memmax - $memperc% ${membar 4}
-${color grey}Swap Usage:$color $swap/$swapmax - $swapperc% ${swapbar 4}
-${color grey}CPU Usage:$color $cpu% ${cpubar 4}
-${color grey}Processes:$color $processes  ${color grey}Running:$color $running_processes
-$hr
-${color grey}Name              PID     CPU%   MEM%
-${color lightgrey} ${top name 1} ${top pid 1} ${top cpu 1} ${top mem 1}
-${color lightgrey} ${top name 2} ${top pid 2} ${top cpu 2} ${top mem 2}
-${color lightgrey} ${top name 3} ${top pid 3} ${top cpu 3} ${top mem 3}
-${color lightgrey} ${top name 4} ${top pid 4} ${top cpu 4} ${top mem 4}
-$hr
-${color grey}File systems:
- / $color${fs_used /}/${fs_size /} ${fs_bar 6 /}
-$hr
-${color grey}Networking:
-Up:$color ${upspeed} ${color grey} - Down:$color ${downspeed}
-${color grey}wlan0:$color ${addr wlan0}
-${color grey}Gateway:$color ${gw_ip} (${gw_iface})
-$hr
-${color grey}Wifi:
-${color grey}SSID:$color ${wireless_essid wlan0}
-${color grey}BSSID:$color ${wireless_ap wlan0}
-${color grey}Speed:$color ${wireless_bitrate wlan0}
-${color grey}Channel:$color ${wireless_channel wlan0} (${wireless_freq wlan0})
-${color grey}Link quality:$color ${wireless_link_qual_perc wlan0}% ${wireless_link_bar 6 wlan0}
-$hr
-${color grey}Ping:
-${color grey}192.168.1.1:$color ${tcp_ping 192.168.1.1 81}
-${color grey}192.168.1.3:$color ${tcp_ping 192.168.1.3 81}
-${color grey}google.com:$color ${tcp_ping google.com}
+${font1}CPU${font}
+${freq}MHz, $cpu%${goto 150}${voffset -10}${cpugraph}
+${font1}MEMORY${font}
+$color $mem, $memperc%${goto 150}${voffset 3}${membar 12}
+
+${font1}TOP${font}
+${font}${color1}Name${goto 165}PID${goto 250}CPU%${goto 320}MEM%
+${color}${top name 1}${goto 150}${top pid 1}${goto 250}${top cpu 1}${goto 320}${top mem 1}
+${top name 2}${goto 150}${top pid 2}${goto 250}${top cpu 2}${goto 320}${top mem 2}
+${top name 3}${goto 150}${top pid 3}${goto 250}${top cpu 3}${goto 320}${top mem 3}
+${top name 4}${goto 150}${top pid 4}${goto 250}${top cpu 4}${goto 320}${top mem 4}
+
+${font1}DISK${font}
+ / $color${fs_used /}/${fs_size /}${offset 20}${voffset 3}${fs_bar 12 /}
+
+${font1}NETWORK${font}
+${color1}Up:$color ${upspeed ${gw_iface}} ${color1} - Down:$color ${downspeed ${gw_iface}}
+${color1}${gw_iface}:$color ${addr ${gw_iface}}
+${color1}Gateway:$color ${gw_ip}
+
+${font1}WIFI${font}
+${color1}SSID:$color ${wireless_essid ${gw_iface}}
+${color1}BSSID:$color ${wireless_ap ${gw_iface}}
+${color1}Speed:$color ${wireless_bitrate ${gw_iface}}
+${color1}Channel:$color ${wireless_channel ${gw_iface}} (${wireless_freq ${gw_iface}})
+${color1}Link quality:$color ${wireless_link_qual_perc ${gw_iface}}%${voffset 3}${goto 170}
+
+${font1}PING${font}
+${color1}192.168.1.1:$color ${tcp_ping 192.168.1.1 81}ms
+${color1}192.168.1.3:$color ${tcp_ping 192.168.1.3 81}ms
+${color1}google.com:$color ${tcp_ping google.com}ms
 ]]
