Update conky config

--- a/linux/.config/conky/conky.conf
+++ b/linux/.config/conky/conky.conf
@@ -1,4 +1,7 @@
 -- vim: ft=lua
+local wifi_interface = 'wlp3s0'
+local lan_interface = 'enp0s31f6'
+
 conky.config = {
     alignment = 'top_right',
     background = true,
@@ -21,6 +24,8 @@ conky.config = {
     font2 = 'DejaVu Sans Mono:size=12', -- Fixed width
     gap_x = 0,
     gap_y = 0,
+    if_up_strictness = 'link',
+    maximum_width = 350,
     minimum_height = 5,
     minimum_width = 5,
     net_avg_samples = 2,
@@ -37,17 +42,24 @@ conky.config = {
     show_graph_range = false,
     show_graph_scale = false,
     stippled_borders = 0,
+    -- Templates
+    -- Network interface templates
+    -- Use as ${template0 wireless_ap} and so on to automatically use the
+    -- right interface.
+    template0 = [[${\1 ]] .. wifi_interface .. [[}]],
+    template1 = [[${\1 ]] .. lan_interface .. [[}]],
+    -- Multi arg versions of the above
+    template2 = [[${\1 ]] .. wifi_interface .. [[ \2}]],
+    template3 = [[${\1 ]] .. lan_interface .. [[ \2}]],
     update_interval = 1.0,
-    uppercase = false,
     use_spacer = 'none',
     use_xft = true,
 }
 
 conky.text = [[
-${font1}CPU${font}
-${freq}MHz, $cpu%${goto 150}${voffset -10}${cpugraph}
-${font1}MEMORY${font}
-$color $mem, $memperc%${goto 150}${voffset 3}${membar 12}
+${font1}CPU/MEMORY${font}
+${freq}MHz, $cpu%${goto 150}${voffset 3}${cpugraph 20}
+$color $mem, $memperc%${goto 150}${voffset 3}${membar 20}
 
 ${font1}TOP${font}
 ${font}${color1}Name${goto 165}PID${goto 250}CPU%${goto 320}MEM%
@@ -60,16 +72,31 @@ ${font1}DISK${font}
  / $color${fs_used /}/${fs_size /}${offset 20}${voffset 3}${fs_bar 12 /}
 
 ${font1}NETWORK${font}
-${color1}Up:$color ${upspeed ${gw_iface}} ${color1} - Down:$color ${downspeed ${gw_iface}}
-${color1}${gw_iface}:$color ${addr ${gw_iface}}
-${color1}Gateway:$color ${gw_ip}
+${template0 if_up}\
+UP: ${template0 upspeed}${goto 200}DOWN: ${template0 downspeed}
+${voffset -5}\
+${template2 upspeedgraph 30,160}${goto 200}${template2 downspeedgraph 30,160}
+${voffset -15}${color1}${template0 eval}:$color ${template0 addr}
+
+${endif}\
+${template1 if_up}\
+UP: ${template1 upspeed}${goto 200}DOWN: ${template1 downspeed}
+${voffset -5}\
+${template3 upspeedgraph 30,160}${goto 200}${template3 downspeedgraph 30,160}
+${voffset -15}${color1}${template1 eval}:$color ${template1 addr}
+
+${endif}\
+${color1}Gateway:$color ${gw_ip} (${gw_iface})
 
 ${font1}WIFI${font}
-${color1}SSID:$color ${wireless_essid ${gw_iface}}
-${color1}BSSID:$color ${wireless_ap ${gw_iface}}
-${color1}Speed:$color ${wireless_bitrate ${gw_iface}}
-${color1}Channel:$color ${wireless_channel ${gw_iface}} (${wireless_freq ${gw_iface}})
-${color1}Link quality:$color ${wireless_link_qual_perc ${gw_iface}}%${voffset 3}${goto 170}
+${color1}SSID:$color ${template0 wireless_essid} (${template0 wireless_ap})
+${color1}Speed:$color ${template0 wireless_bitrate}
+${color1}Channel:$color ${template0 wireless_channel} (${template0 wireless_freq})
+${color1}Link quality:$color ${template0 wireless_link_qual_perc}%${voffset 3}${goto 170}
+
+${font1}AUDIO${font}
+${pa_sink_description}\
+${alignr}${pa_sink_active_port_description} (${pa_sink_volume}%)
 
 ${font1}PING${font}
 ${color1}192.168.1.1:$color ${tcp_ping 192.168.1.1 81}ms
