--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -15,6 +15,7 @@
 	# From https://github.com/not-an-aardvark/git-delete-squashed
 	delete-squashed = "!git checkout -q master && git for-each-ref refs/heads/ '--format=%(refname:short)' | while read branch; do mergeBase=$(git merge-base master $branch) && [[ $(git cherry master $(git commit-tree $(git rev-parse $branch\\^{tree}) -p $mergeBase -m _)) == '-'* ]] && git branch -D $branch; done"
 	deploy-tag = "!git tag deploy/${1:-prod}/$(git rev-parse --short HEAD) && git --no-pager tag -l deploy/${1:-prod}/$(git rev-parse --short HEAD) #"
+	switch-to-main = !git branch -m master main && git fetch origin && git branch -u origin/main main && git branch -dr origin/master && git symbolic-ref refs/remotes/origin/HEAD refs/remotes/origin/main
 
 [push]
 	default = current
