--- a/terminal/.config/kitty/kitty.conf
+++ b/terminal/.config/kitty/kitty.conf
@@ -7,13 +7,20 @@
 #
 # Appearance
 font_family Hack Nerd Font
+font_size 13
 background_opacity 0.85
 
 # Default size
 remember_window_size no
 initial_window_width 169c
-initial_window_height 49c
+initial_window_height 51c
 resize_in_steps yes
+
+# Mac tweaks
+macos_quit_when_last_window_closed yes
+# This solves the 'first click activating the window' problem
+focus_follows_mouse yes
+macos_option_as_alt left
 
 # Limit the number of layouts enabled to just the ones I might use, and
 # default to grid
