Switch to using Hack and Nerd Fonts Symbols instead of a patched font

--- a/terminal/.config/kitty/kitty.conf
+++ b/terminal/.config/kitty/kitty.conf
@@ -6,8 +6,10 @@
 # - switch panes: ctrl-shift-[, ctrl-shift-]
 #
 # Appearance
-font_family Hack Nerd Font
-font_size 13
+# Note: nerd fonts symbols font is automatically used, and should be
+# installed as well.
+font_family Hack
+font_size 12
 background_opacity 0.85
 
 # Default size
