Remove old personal git host

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -23,7 +23,7 @@ Host 10.* *-bastion
     IdentityFile ~/.ssh/id_rsa_valimail
     User mark.harrison
 
-Host github.com git.int.hex0.com
+Host github.com
     IdentitiesOnly yes
     IdentityFile ~/.ssh/id_ed25519_github
 
