Update SSH settings

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -14,18 +14,14 @@ AddKeysToAgent yes
 
 # Include additional private config, if it's present
 Include config-private
-# Include work config, if present
-Include config_valimail
-
-# Use specific SSH keys/users
-Host 10.* *-bastion
-    IdentitiesOnly yes
-    IdentityFile ~/.ssh/id_rsa_valimail
-    User mark.harrison
 
 Host github.com
     IdentitiesOnly yes
     IdentityFile ~/.ssh/id_ed25519_github
+
+Host stash.cuda*
+    IdentitiesOnly yes
+    IdentityFile ~/.ssh/id_ed25519_barracuda_stash
 
 Host *.local
     IdentitiesOnly yes
