autotiling-rs doesn't work, use normal autotiling

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -237,8 +237,8 @@ exec --no-startup-id xset s 480 dpms 600 600 600
 exec --no-startup-id dbus-launch dunst --config ~/.config/dunst/dunstrc
 
 # Automatically alternate container layouts between horizontal and vertical
-# pacman -S autotiling-rs
-exec_always --no-startup-id autotiling-rs
+# yay -S autotiling
+exec_always --no-startup-id autotiling
 
 ##################
 # floating rules #
