Improve gaps behavior

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -20,7 +20,10 @@ new_window pixel 1
 
 # Set inner/outer gaps
 gaps inner 6
-gaps outer 3
+#gaps outer 3
+
+smart_gaps on
+smart_borders on
 
 # show window title bars (not officially supported with i3gaps)
 #default_border normal
