--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -144,7 +144,7 @@ bindsym $mod+XF86AudioRaiseVolume exec amixer -D pulse sset Master 1%+ && pkill 
 bindsym $mod+XF86AudioLowerVolume exec amixer -D pulse sset Master 1%- && pkill -RTMIN+1 i3blocks
 
 # mute
-bindsym XF86AudioMute exec amixer sset Master toggle && killall -USR1 i3blocks
+bindsym XF86AudioMute exec amixer sset Master toggle && pkill -RTMIN+1 i3blocks
 
 # audio control
 bindsym XF86AudioPlay exec playerctl play
@@ -276,11 +276,12 @@ client.urgent           $urgentred $urgentred $white $yellowbrown $yellowbrown
 # bar settings (input comes from i3blocks) #
 ############################################
 bar {
-    font pango: Noto Sans Regular 12
+    font pango: Liberation Sans Regular 12
     status_command i3blocks -c ~/.config/i3/i3blocks.conf
     position bottom
     tray_output primary
-    tray_padding 2
+    tray_padding 7
+    height 35
 
     # When strip_workspace_numbers is set to yes,
     # any workspace that has a name of the form
