--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -1,42 +1,13 @@
-# List of valid properties:
-#
-# align
-# color
-# command
-# full_text
-# instance
-# interval
-# label
-# min_width
-# name
-# separator
-# separator_block_width
-# short_text
-# signal
-# urgent
-
-# Global properties
 separator=false
+separator_block_width=20
 markup=pango
 
-[simple-2]
-full_text=: :
-color=#717171
-
-# Disk usage
-#
-# The directory defaults to $HOME if the instance is not specified.
-# The script may be called with a optional argument to set the alert
-# (defaults to 10 for 10%).
 [disk]
 label= 
 instance=/
 command=~/.config/i3/scripts/disk
 interval=30
 
-# Memory usage
-#
-# The type defaults to "mem" if the instance is not specified.
 [memory]
 label= 
 command=~/.config/i3/scripts/memory
@@ -45,7 +16,6 @@ interval=2
 [cpu_usage]
 label= 
 command=~/.config/i3/scripts/cpu_usage
-#min_width=CPU: 100.00%
 interval=2
 
 [CPU-temperature]
@@ -57,34 +27,27 @@ interval=30
 command=~/.config/i3/scripts/bandwidth2
 interval=persist
 
-# Battery indicator
 [battery]
-# for alternative battery script  change to battery1
-# change this to battery-pinebook-pro if you are running on pinebook-pro
 command=~/.config/i3/scripts/battery2
 label=
 interval=30
 
-[simple-2]
-full_text=: :
-color=#717171
-
 [pavucontrol]
 full_text=
 command=pavucontrol
+separator_block_width=5
 
 [volume-pulseaudio]
 command=~/.config/i3/scripts/volume
 instance=Master
 interval=1
+signal=1
 
-#set power-profile
 [ppd_menu]
 full_text=
 command=~/.config/i3/scripts/power-profiles
-color=#407437
+separator_block_width=5
 
-#Show the current power-profile
 [ppd-status]
 command=~/.config/i3/scripts/ppd-status
 interval=5
@@ -92,7 +55,3 @@ interval=5
 [time]
 command=date '+%a %d %b %H:%M:%S'
 interval=1
-
-[simple-2]
-full_text=: :
-color=#717171
