--- a/i3/.config/picom.conf
+++ b/i3/.config/picom.conf
@@ -1,5 +1,5 @@
 # Shadows
-shadow = true;
+shadow = false;
 shadow-radius = 7;
 shadow-offset-x = -7;
 shadow-offset-y = -7;
@@ -10,6 +10,13 @@ shadow-exclude = [
   "class_g = 'Cairo-clock'",
   "_GTK_FRAME_EXTENTS@:c",
   "class_g = 'firefox' && argb",
+];
+
+# Rounded corners
+corner-radius = 8;
+rounded-corners-exclude = [
+  "class_g = 'Polybar'",
+  "_GTK_FRAME_EXTENTS@:c",
 ];
 
 # Fading
