--- a/i3/.config/picom.conf
+++ b/i3/.config/picom.conf
@@ -39,7 +39,7 @@ blur-background-exclude = [
 ];
 
 # General Settings
-backend = "xrender";
+backend = "glx";
 vsync = true;
 mark-wmwin-focused = true;
 mark-ovredir-focused = true;
