--- a/i3/.config/polybar/config.ini
+++ b/i3/.config/polybar/config.ini
@@ -129,6 +129,8 @@ ramp-capacity-2 = 
 ramp-capacity-3 = 
 ramp-capacity-4 = 
 
+label-charging = ⚡%percentage%%
+
 ramp-capacity-foreground = ${colors.primary}
 ramp-capacity-0-foreground = ${colors.alert}
 
