Add balance keybinding

--- a/misc/.config/mpv/input.conf
+++ b/misc/.config/mpv/input.conf
@@ -2,3 +2,7 @@
 # reuse youtube keys)
 ] add speed 0.25
 [ add speed -0.25
+
+# Bind the quote key to toggle balance between all left, all right, center
+# For listening to broadcastify feeds that have audio on left and right channels
+' cycle_values af "lavfi=[pan=stereo|c0=c0|c1=c0]" "lavfi=[pan=stereo|c0=c1|c1=c1]" ""
