Add comments on viewing bindings

--- a/misc/.config/mpv/input.conf
+++ b/misc/.config/mpv/input.conf
@@ -1,3 +1,6 @@
+# View all keybindings: mpv --idle --script-opts=stats-bindlist=yes
+# Test keybindings: mpv --idle --input-test
+
 # Better speed controls (note < and > are for playlist moving, so I can't
 # reuse youtube keys)
 ] add speed 0.25
