Change ssh config to use conf.d for additional configs

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -13,7 +13,7 @@ UseKeychain yes
 AddKeysToAgent yes
 
 # Include additional private config, if it's present
-Include config-private
+Include conf.d/*
 
 Host github.com
     IdentitiesOnly yes
