Normalize audio profile

--- a/misc/.config/mpv/mpv.conf
+++ b/misc/.config/mpv/mpv.conf
@@ -1,3 +1,7 @@
 no-audio-display
 volume=80
 replaygain=track
+
+[norm]
+profile-desc="Normalize audio volume"
+af=lavfi=[loudnorm=I=-16:TP=-3:LRA=4]
