--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -34,6 +34,8 @@
 	wsErrorHighlight = all
 #[url "git@github.com:"]
 #	insteadOf = https://github.com/
+[url "git@github.com:"]
+	insteadOf = gh:
 [pull]
 	rebase = true
 [rebase]
