--- a/common/dot-config/git/config
+++ b/common/dot-config/git/config
@@ -57,3 +57,7 @@
 	smudge = git-lfs smudge -- %f
 	process = git-lfs filter-process
 	required = true
+
+[credential "https://dev.azure.com"]
+	helper = /usr/local/share/gcm-core/git-credential-manager
+	useHttpPath = true
